--- a/views/tools/gene_postreport.handlebars
+++ b/views/tools/gene_postreport.handlebars
@@ -1,5 +1,5 @@
 <div class="row" id="start-panel-begin">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3" style="margin-top: 100px">
   <h2>Your Gene Data Is Processed</h2>
       <div class="form-group">
         <div class="panel panel-default">
